# Caffi

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
data/: icons.gresource.xml
data/icons/: README.md
src/: app.rs  cal.rs  event.rs  main.rs  note.rs  style.rs
src/proto/: wayland.rs
src/widgets/: anilabel.rs  mod.rs  monthgrid.rs  yeargrid.rs
style/: default.scss
