[package]
name = "caffi"
version = "0.1.0-alpha.4"
authors = ["Elvyria <elvyria@tutanota.com>"]
description = "A simple calendar widget for your desktop."
repository = "https://github.com/Elvyria/caffi"
license = "MIT"
edition = "2021"

[features]
Wayland = ["dep:gtk4-layer-shell"]
Sass = ["dep:grass"]
X11 = ["dep:x11rb", "dep:gdk-x11"]
Accent = ["dep:zbus"]

[dependencies]
argh = "0.1"
bitflags = "2"
color-print = "0.3.7"
gdk-x11 = { version = "0.9", package = "gdk4-x11", features = ["xlib"], optional = true }
glib = "0.20"
grass = { version = "0.13", package = "grass_compiler", optional = true }
gtk = { version = "0.9", features = ["v4_8"], package = "gtk4" }
gtk4-layer-shell = { version = "0.5", optional = true }
jiff = "0.2"
libc = "0.2"
relm4 = { version = "0.9", features = ["macros"], default-features = false }
thiserror = "2.0"
tokio = { version = "1.47", features = ["time", "macros", "fs", "io-util", "signal", "process"] }
tracker = "0.2"
x11rb = { version = "0.13", features = ["xinerama"], optional = true  }
zbus = { version = "5", default-features = false, features = ["tokio"], optional = true }
smallvec = '*'

[build-dependencies]
anyhow = "1.0"
grass = { version = "0.13", package = "grass_compiler" }
glib-build-tools = "0.21"
